# typedtemplate

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
src/typedtemplate/: __init__.py  engine.py  template.py  version.py
tests/: conftest.py  test_engine.py  test_template.py
