[project]
name = "typedtemplate"
description = "A typed string templating library using Pydantic"
authors = [
    {name = "Todd Cullen", email = "todd@100-x.ai"},
]
dependencies = [
    "pydantic>=2.6.3",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
dynamic = ['version']

[project.optional-dependencies]
jinja2 = [
    "jinja2>=3.1.3",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = 'src/typedtemplate/version.py'

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = [
    '/README.md',
    '/HISTORY.md',
    '/tests',
    '/requirements',
]

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.0.2",
    "django>=4.2.11",
    "jinja2>=3.1.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
